# service/models/errors.go
@@ -1,0 +1,10 @@
+package models
+
+import "errors"
+
+var (
+    ErrForbidden             = errors.New("forbidden")
+    ErrConversationNotFound  = errors.New("conversation not found")
+	ErrMessageNotFound = errors.New("message not found")
+	ErrReactionNotFound = errors.New("reaction not found")
+)
